--- a/playbooks/1.6_webapp.yml
+++ b/playbooks/1.6_webapp.yml
@@ -16,7 +16,8 @@
 
 # This will deploy a web app locally rather than to another server.
 - name: Deploy a web application
-  hosts: control_machine
+  # hosts: control_machine
+  hosts: all
 
   # Values we're using in more than one place are best
   # stored as variables. Playbooks are one of the many
@@ -31,21 +32,24 @@
     # Python package. Check out the `pip` module - and
     # remember, we need to run it as root.
     - name: Install flask
-      fail: msg='Unimplemented task!'
-      ignore_errors: yes
+      become: True
+      pip:
+        name: flask
 
     # We can create directories with the `file` module. Make
     # sure to use the deploy_directory variable!
     - name: Create the deploy directory if it doesn't exist.
-      fail: msg='Unimplemented task!'
-      ignore_errors: yes
+      file:
+        path: "{{ deploy_directory }}"
+        state: directory
 
     # This repository ships with 'files/hello_world/hello_world.py',
     # a simple Flask application. Copy it to the deploy directory
     # with the `copy` module.
     - name: Deploy flask app
-      fail: msg='Unimplemented task!'
-      ignore_errors: yes
+      copy:
+        src: "../files/hello_world/hello_world.py"
+        dest: "{{ deploy_directory }}"
 
     # Normally, we'd deploy Flask with a process
     # manager like supervisor. To keep this example
@@ -70,7 +74,9 @@
     - name: Start flask as a backgrounded process
       # We can set environment variables for a task to be run with.
       environment:
-        FLASK_APP: "{{deploy_directory|expanduser}}/hello_world.py"
+        # FLASK_APP: "{{deploy_directory|expanduser}}/hello_world.py"
+        # FLASK_APP: "{{deploy_directory}}/hello_world.py"
+        FLASK_APP: "/home/user105/apps/hello_world.py"
       # When we run Flask, it attaches to our terminal. When we run
       # a shell command with Ansible, it operates much like it would
       # if we ran it as our user, so this task wouldn't complete
@@ -90,16 +96,21 @@
     # Like other package managers, we'll want to run this command as
     # root by using `become: yes`.
     - name: Install nginx
-      fail: msg='Unimplemented task!'
-      ignore_errors: yes
+      become: True
+      apt:
+        name: nginx
+        state: latest
 
     # (We'll need to be root for the following nginx tasks, too!)
 
     # Use the `template` module to template the configuration file
     # from `templates/proxy.j2` to `/etc/nginx/sites-available`. 
     - name: Template nginx configuration file
-      fail: msg='Unimplemented task!'
-      ignore_errors: yes
+      become: True
+      template:
+        src: /Users/neo/Desktop/workspace/deploying-applications-with-ansible/templates/proxy.j2
+        dest: /etc/nginx/sites-available/proxy
+      tags: ['nginx_config_file']
 
     # nginx loads configuration files from `/etc/nginx/sites-enabled`,
     # which are traditionally symlinks to files in
@@ -107,20 +118,30 @@
     # all symlinks so that nginx is only serving this Flask app.
     # (HINT: Try out `with_fileglob: /etc/nginx/sites-enabled/*`)
     - name: Disable all nginx sites
-      fail: msg='Unimplemented task!'
-      ignore_errors: yes
+      become: True
+      file:
+        path: /etc/nginx/sites-enabled/default
+        # with_fileglob: 
+        state: absent
+      tags: ['disable_all_nginx_sites']
 
     # Create a symlink in `/etc/nginx/sites-enabled` pointing to the
     # file we previously templated into `/etc/nginx/sites-available`.
     - name: Enable this site
-      fail: msg='Unimplemented task!'
-      ignore_errors: yes
+      become: True
+      file:
+        path: /etc/nginx/sites-enabled/proxy
+        src: /etc/nginx/sites-available/proxy
+        state: link
 
     # The nginx package installs it as a service, so we can use the
     # `service` or `systemd` commands to manage it.
     - name: Reload nginx configuration
-      fail: msg='Unimplemented task!'
-      ignore_errors: yes
+      become: True
+      systemd:
+        daemon_reload: yes
+        state: restarted
+        name: nginx
 
     # Ansible commands process much faster than manual execution, so
     # it's possible that nginx won't have bound to port 80 before we
